--- a/WindowSmith/index.html
+++ b/WindowSmith/index.html
@@ -92,7 +92,7 @@
     <!-- Navigation -->
     <nav class="fixed w-full z-50 top-0 start-0 border-b border-white/5 bg-[#0f172a]/80 backdrop-blur-md">
         <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between px-6 py-4">
-            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <a href="../" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <div class="w-8 h-8 bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg flex items-center justify-center shadow-lg">
                     <i class="ph ph-windows-logo text-white text-lg"></i>
                 </div>
@@ -137,8 +137,7 @@
                 </a>
                 
                 <!-- Secondary Link back to your Main Portfolio (The Hub) -->
-                <!-- Replace 'caltrackermaker' with your actual username -->
-                <a href="https://caltrackermaker.github.io/" 
+                <a href="../" 
                    class="inline-flex items-center justify-center px-8 py-4 text-base font-semibold text-gray-300 transition-all duration-200 glass rounded-full hover:text-white hover:bg-white/10">
                     <i class="ph-bold ph-house mr-2"></i> Bauer Haus
                 </a>
