--- a/WindowSmith/index.html
+++ b/WindowSmith/index.html
@@ -124,7 +124,7 @@
             </h1>
             
             <p class="text-lg md:text-xl text-gray-400 mb-10 max-w-2xl mx-auto leading-relaxed">
-                Stop memorizing keyboard shortcuts. <strong>WindowSmith</strong> adds a visual, Windows 11-style snap menu to your Mac. Just point, click, and get organized.
+                Forget the complex shortcuts. WindowSmith brings a visual snap grid to every window. Hover, click, and instantly organize your screen with precision layouts.
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
