--- a/WindowSmith/index.html
+++ b/WindowSmith/index.html
@@ -284,7 +284,7 @@
         <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-4 md:mb-0">
                 <span class="text-lg font-bold text-white">WindowSmith</span>
-                <p class="text-sm text-gray-500 mt-1">© 2026. Handcrafted for macOS.</p>
+                <p class="text-sm text-gray-500 mt-1">© 2026 BauerHaus. All rights reserved.</p>
             </div>
             <!-- Removed Social Icons and Links -->
         </div>
