--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     Software for the<br>Modern Mac.
                 </h1>
                 <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards;">
-                    Native utilities. Zero Electron. Pure Swift.
+                    True native utilities. Zero Electron. Pure Swift.
                 </p>
             </section>
 
