--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <footer>
             <div class="footer-content">
                 <p>Copyright © 2026 BauerHaus LLC. All rights reserved.</p>
-                <button class="footer-link" onclick="toggleModal('privacy')">Privacy Commitment</button>
+                <button class="footer-link" onclick="toggleModal('privacy')">Privacy Policy</button>
             </div>
         </footer>
     </div>
