--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@
 
         <main>
             <section class="hero">
-                <h1 style="opacity:0; animation: fadeUp 0.8s var(--ease) forwards;">
+                <h1 style="opacity:0; animation: fadeUp 0.8s var(--ease) forwards; text-align: left;">
                     Software for the<br>Modern Mac.
                 </h1>
-                <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards;">
+                <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards; text-align: left;">
                     True native utilities. Zero Electron. Pure Swift.
                 </p>
             </section>
