--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h1 style="opacity:0; animation: fadeUp 0.8s var(--ease) forwards; text-align: left;">
                     Software for the<br>Modern Mac.
                 </h1>
-                <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards; text-align: left;">
+                <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards; text-align: left; margin: 0;">
                     True native utilities. Zero Electron. Pure Swift.
                 </p>
             </section>
