--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             font-weight: 600; /* Apple prefers 600 over 800 these days */
             letter-spacing: -0.03em;
             line-height: 1.05;
-            margin: 0 auto 24px;
+            margin: 0 auto;
             max-width: 800px;
             background: linear-gradient(180deg, #fff 0%, #a1a1a6 100%);
             -webkit-background-clip: text;
