--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             letter-spacing: -0.03em;
             line-height: 1.05;
             margin: 0 auto;
+            text-align: left;
             max-width: 800px;
             background: linear-gradient(180deg, #fff 0%, #a1a1a6 100%);
             -webkit-background-clip: text;
@@ -124,6 +125,7 @@
             font-size: 1.5rem; /* Larger introduction text */
             color: var(--text-dim);
             line-height: 1.4;
+            text-align: left;
             max-width: 580px;
             margin: 0 auto;
             font-weight: 400;
