--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
         <main>
             <section class="hero">
-                <h1 style="opacity:0; animation: fadeUp 0.8s var(--ease) forwards; text-align: left;">
+                <h1 style="opacity:0; animation: fadeUp 0.8s var(--ease) forwards; text-align: left; margin: 0;">
                     Software for the<br>Modern Mac.
                 </h1>
                 <p style="opacity:0; animation: fadeUp 0.8s var(--ease) 0.1s forwards; text-align: left; margin: 0;">
