--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
 
         .container {
-            max-width: 980px; /* Apple uses narrower containers for readability */
+            max-width: 100%; /* Apple uses narrower containers for readability */
             margin: 0 auto;
             padding: 0 24px;
         }
